--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 *.pdf
 *.log
 *.html
-/data
-/Spring 2025
-/Winter 2025
+*.md
+data/Fall 2024/*.xlsx
+data/Winter 2025/*.xlsx
+data/Spring 2025/*.xlsx
